k8s/_generated/apps/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blog
    app.kubernetes.io/name: blog
  name: blog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
      app.kubernetes.io/name: blog
  template:
    metadata:
      labels:
        app: blog
        app.kubernetes.io/name: blog
    spec:
      containers:
        - image: nginx:1.27.1
          name: blog
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 50Mi
          securityContext:
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/nginx
              name: blog-conf
              readOnly: true
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/tmp
              name: tmp
            - mountPath: /var/log/nginx
              name: log-nginx
            - mountPath: /var/cache/nginx
              name: cache-nginx
            - mountPath: /var/run
              name: var-run
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: virtualhost.conf
                path: virtualhost/virtualhost.conf
            name: blog-conf
          name: blog-conf
        - emptyDir: {}
          name: cache-nginx
        - emptyDir: {}
          name: log-nginx
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: var-run
